# cc-security-proxy

./: .env.example  .gitignore  README.md  launcher.py  pyproject.toml  ui.html
examples/: malicious_payloads.json  safe_payloads.json
sandbox/: Dockerfile  entrypoint.sh
src/cc_security_proxy/: __main__.py  cli.py  config.py  dashboard.py  dashboard_app.py  handler.py  proxy.py  scanner.py  upstream.py
src/cc_security_proxy/llm/: client.py  prompts.py
src/cc_security_proxy/modes/: base.py  default_mode.py  protected_mode.py  smart_mode.py
src/cc_security_proxy/sandbox/: Dockerfile  executor.py  rules.py
tests/: conftest.py  test_proxy.py  test_sandbox.py  test_scanner.py  test_smart_mode.py
